<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Testing Intents</string>
    <string name="activity1">Activity 1</string>
    <string name="activity2">Activity 2</string>
    <string name="changeAct1">Go to Activity 1</string>
    <string name="changeAct2">Go to Activity 2</string>
    <string name="changeAct3">Go to Activity 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_intent_activity2">Testing Intents</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_intent_activity3">Testing Intents</string>
    <string name="num_input1">Enter your 1st number</string>
    <string name="num_input2">Enter your 2nd number</string>
    <string name="btn_sum1">Calculate</string>

</resources>
