<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.testingintents.app.IntentActivity2">

    <TextView
        android:id="@+id/tv2"
        android:text="@string/activity2"
        android:textSize="12pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:padding="20dp"
        />

    <Button
        android:id="@+id/goAct1"
        android:text="@string/changeAct1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/tv2"
        android:onClick="onClickAct1"
        />

    <Button
        android:id="@+id/goAct3"
        android:text="@string/changeAct3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_toRightOf="@+id/goAct1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:onClick="onClickAct3"
        />

</RelativeLayout>
