<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.testingintents.app.IntentActivity3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numtv1"
        android:text="@string/num_input1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:id="@+id/numview1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/numtv1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numtv2"
        android:text="@string/num_input2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/numview1"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:id="@+id/numview2"
        android:layout_below="@+id/numtv2"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sum1"
        android:id="@+id/btnSum1"
        android:layout_below="@+id/numview2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numtv3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnSum1"
        android:layout_marginTop="50dp"
        />

</RelativeLayout>
